--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=hadoopmetrics
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
