added path as config file and moved to contentsummary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=hadoopmetrics
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env,beans
 hadoop.defaultFS=hdfs://127.0.0.1:8020
+hadoop.directoryPath=/
