added config server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env,beans
 hadoop.defaultFS=hdfs://127.0.0.1:8020
 hadoop.directoryPath=/
+spring.config.import=optional:configserver:http://127.0.0.1:8888
